# sonarqube-fastapi

./: .coverage  .env  .gitignore  Dockerfile.test  Jenkinsfile  Makefile  coverage.xml  pyproject.toml  requirements.txt  result.xml  run_sonarqube.sh  run_tests.sh  sonar-project.properties
task_manager/src/: dependency_setup.py  main.py
task_manager/src/common/: exception.py
task_manager/src/domain/: task.py
task_manager/src/domain/contracts/: __init__.py  abc_task_repository.py
task_manager/src/domain/dtos/: __init__.py  create_task_dto.py  update_task_dto.py
task_manager/src/domain/responses/: base_response.py
task_manager/src/infrastructure/: task_repository.py
task_manager/tests/unit_tests/: test_main.py
task_manager/tests/unit_tests/infrastructure/: test_task_repository.py
